# django_culture

./: .dockerignore  .env.dev  .env.prod  .gitignore  Dockerfile  Dockerfile.prod  README.md  culture  db.sqlite3  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements.dev  requirements.in  requirements.txt  ruff.toml
backend/: asgi.py  celery.py  s3_storage.py  settings.py  urls.py
common/: apps.py  pagination.py
common/admin/: base.py
common/utils/: db.py  email.py  pyutils.py
core/: apps.py  celery.py  middlewares.py  settings.py  urls.py
core/admin/: default_models.py  feature_flag.py
core/backends/: allauth.py
core/management/commands/: setup.py
core/managers/: user.py
core/middleware/: allauth_conflict.py  session.py
core/migrations/: 0001_initial.py
core/models/: user.py
core/templates/: activation.html
core/utils/: __init__.py  feature_flag.py
nginx/: nginx.conf
rest/: urls.py
rest/v0/serializers/: __init__.py  base.py
rest/v0/tests/: __init__.py
rest/v0/utils/: __init__.py
rest/v0/views/: __init__.py
users/: admin.py  manager.py  models.py  serializers.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers_user_is_active.py
